@@ -1464,3 +1464,80 @@ zc.recipe.cmmi = 1.3.6
 # Required by:
 # collective.xmltestreport==1.2.2
 zope.testrunner = 4.4.10
+
+# Added by buildout at 2016-10-06 21:36:42.918636
+Pillow = 3.3.1
+Products.DocFinderTab = 1.0.5
+Products.PloneHotfix20160419 = 1.0
+Products.PythonField = 1.1.3
+Products.TALESField = 1.1.3
+Products.TemplateFields = 1.2.5
+collective.recipe.backup = 2.20
+collective.recipe.supervisor = 0.19
+collective.recipe.template = 1.12
+meld3 = 1.0.2
+mr.scripty = 1.0b3
+python-ldap = 2.4.25
+supervisor = 3.1.3
+z3c.recipe.staticlxml = 0.10
+
+# Required by:
+# eke.specimens===1.1.11dev-r0
+Products.DataGridField = 1.9.4
+
+# Required by:
+# Products.PloneLDAP==1.2
+Products.LDAPMultiPlugins = 1.14
+
+# Required by:
+# Products.PloneLDAP==1.2
+Products.LDAPUserFolder = 2.27
+
+# Required by:
+# plone.app.ldap==1.3.2
+Products.PloneLDAP = 1.2
+
+# Required by:
+# eke.publications===1.1.17dev-r0
+biopython = 1.68
+
+# Required by:
+# edrnsite.vanity===1.0.4dev-r0
+collective.autopermission = 1.0b2
+
+# Required by:
+# eke.specimens===1.1.11dev-r0
+collective.vdexvocabulary = 0.2.2
+
+# Required by:
+# Products.LDAPUserFolder==2.27
+dataflake.fakeldap = 1.1
+
+# Required by:
+# plone.api==1.5
+decorator = 4.0.10
+
+# Required by:
+# collective.vdexvocabulary==0.2.2
+imsvdex = 1.1
+
+# Required by:
+# eke.biomarker===1.1.21dev-r0
+# eke.publications===1.1.17dev-r0
+plone.api = 1.5
+
+# Required by:
+# edrnsite.policy===1.2.17dev-r0
+plone.app.ldap = 1.3.2
+
+# Required by:
+# zope.testrunner==4.5.1
+six = 1.10.0
+
+# Required by:
+# z3c.recipe.staticlxml==0.10
+zc.recipe.cmmi = 1.3.6
+
+# Required by:
+# collective.xmltestreport==1.2.2
+zope.testrunner = 4.5.1
