@@ -7,6 +7,7 @@ Release Notes - Early Detection of Cancer - Version Portal 4.6.0 - 2016.09.23 - 
     * [CA-1410] - Summary url not being set using set-rdf-sources.py
     * [CA-1350] - Help text on PublicationsFolder fields is confusing
     * [CA-1348] - Summary source URLs should be marked as required
+    * [CA-1388] - Set idsummary resource link for eke.biomarkers during initial setup
 
 
 Release Notes - Early Detection of Cancer - Version Portal 4.5.8 - 2016.09.16 - NCI OPERATIONS
